<resources>
    <string name="app_name">Tribal Hackathon App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="company_name">Full Name</string>
    <string name="gst_in">GST IN</string>
    <string name="email">E-Mail</string>
    <string name="proceed">Proceed</string>
    <string name="otp_text">Please enter the OTP that we have send you.</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify Otp</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="supplier_details">Supplier Details</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="buyer_details">Buyer Details</string>
    <string name="product_details">Product Details</string>
    <string name="total_products">Total Products</string>
    <string name="consignee_details">Consignee Details</string>
    <string name="consignee_checkbox">Add Consignee (If different from above)</string>
    <string name="transportation_details">Transportation Details ( Optional )</string>
    <string name="transportation_mode">Transportation Mode</string>
    <string name="vehicle_no">Vehicle No.</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="hsn">HSN</string>
    <string name="rate">Rate</string>
    <string name="sgst">SGST</string>
    <string name="cgst">CGST</string>
    <string name="igst">IGST</string>
    <string name="discount">Discount</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="supply_place">Place of Supply</string>
    <string name="supply_date">Supply Date</string>
    <string name="contact_person_list">Buyer List</string>

    <string name="company_state">Company State</string>
    <string name="company_address">Company Address</string>
    <string name="company_pin">Pin Code</string>
    <string name="company_city">Company City</string>
    <string name="company_email">Company Email</string>
    <string name="company_gstin">Company GSTIN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="products">Product List</string>
    <string name="invoice">Invoice</string>
    <string name="add_buyer">Add Buyer</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="add_consignee">Add Consignee</string>
    <string name="add_product">Add Product</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="total_tax">Total Tax</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="mandatory">*</string>
    <string name="productNameHint">Product Name Hint</string>
    <string name="unitPrice">Unit Price</string>
    <string name="amountTitle">Amount</string>
    <string name="discountPrice">Discount Price</string>
    <string name="taxableAmountTitle">Taxable amount</string>
    <string name="cgstPercentage">CGST ( % )</string>
    <string name="cgstAmount">CGST Amount</string>
    <string name="sgstPercentage">SGST ( % )</string>
    <string name="sgstAmount">SGST Amount</string>
    <string name="igstPercentage">IGST ( % )</string>
    <string name="igstAmount">IGST Amount</string>
    <string name="totalAmount">Total Amount</string>
    <string name="totalAmountTitle">Total Amount</string>
    <string name="discountPercentage">Discount ( % )</string>
    <string name="add_item">Add Item</string>
    <string name="editFirm">Edit Firm Details</string>
    <string name="okay">Save</string>
    <string name="save">Save</string>
    <string name="discountAmount">Discount Amount</string>
    <string name="taxableAmount">Taxable Amount</string>
    <string name="productList">Product List</string>
    <string name="rupee_sign">₹</string>
    <string name="add_signature">Add Signature ( Optional )</string>
    <string name="clear">Clear</string>
    <string name="title_activity_splash_screen1">SplashScreen1</string>
    <string name="tagLine">An easy way to manage GST bills</string>
    <string name="send_email_invoice">Send Email Invoice</string>
    <string name="recipient">Recipient</string>
    <string name="cc">Cc</string>
    <string name="emailMessage">Thank you for your business.</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="preview">Preview</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="attachmentOrderId">Attachment Order Id</string>
    <string name="subjectTitle">Invoice from GST Invoice Maker</string>
    <string name="subject">Subject</string>
    <string name="Rs">\u20B9</string>
    <string name="Rss">\u20A8 </string>
    <string name="already_have_a_account">Already have an account? Login</string>
    <string name="my_invoices">My Invoices</string>
    <string name="logout">Logout</string>
    <string name="firm_name">Firm Name</string>
    <string name="gstin">GSTIN</string>
    <string name="city">City</string>
    <string name="invoices_not_available">Tap here or tap create button in the top to create your first Invoice</string>
    <string name="quotations_not_available">Tap here or tap create button in the top to create your first Quotation</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="quotation_date">Quotation Date</string>
    <string name="discount_error">Discount must be greater than or equal to 100%</string>
    <string name="insurance_charge">Insurance Charges</string>
    <string name="freight_charge">Freight Charges</string>
    <string name="challan_number">Challan Number</string>
    <string name="lr_number">LR Number</string>
    <string name="transporter_name">Transporter Name</string>
    <string name="time_of_supply">Time of Supply</string>
    <string name="place_of_supply">Place of Supply</string>
    <string name="delete_invoice">Delete Invoice</string>
    <string name="change_paid_status_invoice">Change Payment Status</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="terms_and_conditions_default">1. This is an electronically generated invoice\n2. All disputes are subject to SUPPLIERS CITY jurisdiction</string>
    <string name="add_other_details">Add Other Details</string>
    <string name="date_of_supply">Date of supply</string>
    <string name="create">Create</string>
    <string name="create_new">Create New</string>
    <string name="create_new_invoice">Create New Invoice</string>
    <string name="bank_details">Bank Details ( Optional )</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="bank_branch_ifsc">Bank Branch IFSC</string>
    <string name="other_details">Other Details ( Optional )</string>
    <string name="add_transportation_details">Add Transportation details</string>
    <string name="transport_mode">Transport Mode</string>
    <string name="feedback">Feedback</string>
    <string name="query">Query</string>
    <string name="suggestion">Suggestion</string>
    <string name="subscription">Subscription</string>
    <string name="chat">Chat</string>
    <string name="submit">Submit</string>
    <string name="delete_logo">Delete Logo</string>
    <string name="failure_message">Unable to connect to server</string>
    <string name="b2b">b2b</string>
    <string name="b2cs">b2cs</string>
    <string name="b2cl">b2cl</string>
    <string name="gst1">GST1 Upload</string>
    <string name="gstr1Upload">GSTR1 Upload</string>
    <string name="comma">,</string>
    <string name="cess">CESS</string>
    <string name="contact_email">contact@gstinvoicemaker.com</string>
    <string name="contact_mobile">+91 8889922229, 8109109457</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_text">For any technical or non-technical issues, You can reach us on the following email and contact numbers.</string>
    <string name="print">Print</string>
    <string name="save_new"><![CDATA[SAVE & NEW]]></string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="expense">Expense</string>
    <string name="share_links">Sharing URL</string>
    <string name="referral"><![CDATA[Refer & Earn]]></string>
    <string name="terms_conditions_to_avoid_fake_downloads_we_need_the_user_to_sign_up_and_create_at_least_one_invoice_to_count_this_as_a_referral_download"><![CDATA[To avoid fake downloads, we need the user to sign up and create at least one Invoice to count this as a referral download.]]></string>
    <string name="add_expense">Add Expense</string>
    <string name="rate_app">Rate App</string>
    <string name="update_app">Update App</string>
    <string name="search_box_hint">Search by Buyer or Product</string>
    <string name="search_box_hint_quotation">Search by Buyer</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications_text">No Notifications!</string>
    <string name="no_invoices_found_with_these_queries">No Invoices found with this query!</string>
    <string name="no_quotations_found_with_these_queries">No Quotations found with this query!</string>
    <string name="contact_person_name">Contact Person Name</string>
    <string name="delete_quotation">Delete Quotation</string>
    <string name="quotation">Quotation</string>
    <string name="add_contact_person">Add Contact Person</string>
    <string name="contact_person_mobile">Contact Person Mobile</string>
    <string name="contact_person_email">Contact Person Email</string>
    <string name="phone">Phone</string>
    <string name="edit_contact_person">Edit Contact Person</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="create_quotation">Create Quotation</string>
    <string name="contact_person_details">Contact Person Details</string>
    <string name="create_new_quotation">Create New Quotation</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="aadhaar_number">Aadhaar Number</string>

</resources>
