<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF07C"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/imageLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_big"
            android:layout_marginTop="@dimen/margin_medium"

            >

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_logo" />

            <ProgressBar
                android:id="@+id/imageProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/deatilsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageLayout"
            android:layout_marginLeft="@dimen/margin_extra_small"
            android:layout_marginRight="@dimen/margin_extra_small"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="vertical"
            android:padding="@dimen/padding_very_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.7"
                    android:contentDescription="icon_mobile"
                    android:paddingTop="@dimen/padding_large"
                    android:src="@drawable/ic_phone_black_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:paddingBottom="@dimen/padding_large"
                    android:textColorHint="@color/black"

                    >

                    <EditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-smallcaps"
                        android:hint="@string/mobile"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textScaleX="1.2" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.7"
                    android:contentDescription="icon_password"
                    android:paddingTop="@dimen/padding_large"
                    android:src="@drawable/ic_lock_outline_accent_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:paddingBottom="@dimen/padding_large"
                    android:textColorHint="@color/black"

                    >

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textScaleX="1.2" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/button_background"
                android:fontFamily="sans-serif"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textScaleX="1.1"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_very_small"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeSmall" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/layout_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <Button
            android:layout_below="@+id/deatilsLayout"
            android:id="@+id/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_small"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:paddingTop="@dimen/padding_small"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textScaleX="1.1"
            android:textSize="@dimen/textSizeSmall" />

    </RelativeLayout>

</ScrollView>
